--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,7 @@ footer {
     text-align: justify;
     font-size: small;
     height: 480px;
+    padding: 10px;
   }
 
   .carousel-item img {
@@ -277,6 +278,7 @@ footer {
   }
   p {
     font-size: small;
+    margin: 10px;
   }
   iframe {
     height: 120px;
@@ -284,8 +286,14 @@ footer {
   }
   .albumes {
     display: grid;
-    grid-template-columns: 10% 10%;
-    justify-content: space-between;
+    grid-template-columns: 100%;
+    height: 1200px;
+    width: fit-content;
+    width: 600px;
+  }
+  .albumes iframe {
+    height: 200px;
+    width: 300px;
   }
   .notes {
     display: grid;
@@ -296,40 +304,21 @@ footer {
   .pluh {
     font-size: small;
     height: auto;
+    margin: 10px;
   }
 
-  .box-item {
+  .box-item img {
     height: 200px;
-    width: 100%;
+    width: 100px;
     justify-content: space-between;
+    filter: blur(5px);
   }
-  .box1 img {
-    height: 100%;
-    width: 100px;
-  }
-  .box2 img {
-    height: 100%;
-    width: 100px;
-  }
-  .box3 img {
-    height: 100%;
-    width: 100px;
-  }
-  .box1 img:hover {
+  .box-item img:hover {
     height: 100%;
     width: 100px;
     filter: blur(0px);
   }
-  .box2 img:hover {
-    height: 100%;
-    width: 100px;
-    filter: blur(0px);
-  }
-  .box3 img:hover {
-    height: 100%;
-    width: 100px;
-    filter: blur(0px);
-  }
+
   .org {
     display: grid;
     grid-template-columns: 1fr;
