--- a/scss/layouts/_nvt.scss
+++ b/scss/layouts/_nvt.scss
@@ -1,3 +1,18 @@
+.org {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.pluh {
+  background-color: color(from color srgb r g b);
+  height: 500px;
+  width: 500px;
+  color: aliceblue;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 18px;
+}
+
 .cancion {
   justify-content: space-around;
   width: 400px;
