--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ h2 {
 p {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: aliceblue;
+  margin: 5px;
 }
 
 .nav ul {
