--- a/scss/layouts/_mediaqueries.scss
+++ b/scss/layouts/_mediaqueries.scss
@@ -1,4 +1,4 @@
-@media (max-width: 500px) {
+@media (max-width: 768px) {
   .nav ul {
     height: auto;
     font-size: medium;
@@ -29,7 +29,7 @@
 
   .historia {
     text-align: justify;
-    font-size: small;
+    font-size: 10px;
     height: 480px;
     padding: 10px;
   }
@@ -88,6 +88,330 @@
   .box-item img:hover {
     height: 100%;
     width: 100px;
+    filter: blur(0px);
+  }
+
+  .org {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 50px;
+    height: auto;
+  }
+  .cancion {
+    height: 300px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .nav ul {
+    height: auto;
+    font-size: 50px;
+    width: 100%;
+  }
+  .fondo-principal {
+    background-color: black;
+    background-size: 100%;
+  }
+  footer div {
+    font-size: 30px;
+    height: auto;
+  }
+
+  .title {
+    font-size: 150px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .hero {
+    display: grid;
+    grid-template-columns: 100%;
+    height: auto;
+  }
+
+  .historia {
+    text-align: justify;
+    font-size: 30px;
+    height: 650px;
+    padding: 10px;
+  }
+
+  .carousel-item img {
+    height: 400px;
+    width: 400px;
+  }
+  p {
+    font-size: 30px;
+    margin: 10px;
+    height: auto;
+  }
+  iframe {
+    height: 120px;
+    width: 100%;
+  }
+  .albumes {
+    display: grid;
+    grid-template-columns: 100%;
+    height: 1200px;
+
+    width: 800px;
+  }
+  .albumes iframe {
+    height: 200px;
+    width: 300px;
+  }
+  .notes {
+    display: grid;
+    grid-template-columns: 100%;
+    height: 1200px;
+    width: 600px;
+    width: fit-content;
+  }
+  .notes iframe {
+    height: 200px;
+    width: 300px;
+  }
+
+  .pluh {
+    font-size: 25px;
+    height: auto;
+    margin: 10px;
+    width: 1000px;
+  }
+  .box-item {
+    height: 370px;
+  }
+
+  .box-item img {
+    display: block;
+    height: 250px;
+    width: 250px;
+    justify-content: space-around;
+    filter: blur(5px);
+    transition: 0.4s;
+    padding-right: 5px;
+  }
+  .box-item img:hover {
+    height: 300px;
+    width: 300px;
+    filter: blur(0px);
+  }
+
+  .org {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 50px;
+    height: auto;
+  }
+  .cancion {
+    height: 300px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .nav ul {
+    height: auto;
+    font-size: 50px;
+    width: 100%;
+  }
+  .fondo-principal {
+    background-color: black;
+    background-size: 100%;
+  }
+  footer div {
+    font-size: 30px;
+    height: auto;
+  }
+
+  .title {
+    font-size: 150px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .hero {
+    display: grid;
+    grid-template-columns: 100%;
+    height: auto;
+  }
+
+  .historia {
+    text-align: justify;
+    font-size: 30px;
+    height: 850px;
+    padding: 10px;
+  }
+
+  .carousel-item img {
+    height: 400px;
+    width: 400px;
+  }
+  p {
+    font-size: 30px;
+    margin: 10px;
+    height: auto;
+  }
+  iframe {
+    height: 120px;
+    width: 100%;
+  }
+  .albumes {
+    display: grid;
+    grid-template-columns: 100%;
+    height: 1200px;
+
+    width: 800px;
+  }
+  .albumes iframe {
+    height: 200px;
+    width: 300px;
+  }
+  .notes {
+    display: grid;
+    grid-template-columns: 100%;
+    height: 1200px;
+    width: 600px;
+    width: fit-content;
+  }
+  .notes iframe {
+    height: 200px;
+    width: 300px;
+  }
+
+  .pluh {
+    font-size: 25px;
+    height: auto;
+    margin: 10px;
+    width: 1000px;
+  }
+  .box-item {
+    height: 370px;
+  }
+
+  .box-item img {
+    display: block;
+    height: 250px;
+    width: 250px;
+    justify-content: space-around;
+    filter: blur(5px);
+    transition: 0.4s;
+    padding-right: 5px;
+  }
+  .box-item img:hover {
+    height: 300px;
+    width: 300px;
+    filter: blur(0px);
+  }
+
+  .org {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 50px;
+    height: auto;
+  }
+  .cancion {
+    height: 300px;
+  }
+}
+
+@media (max-width: 1440px) {
+  .nav ul {
+    height: auto;
+    font-size: 50px;
+    width: 100%;
+  }
+  .fondo-principal {
+    background-color: black;
+    background-size: 100%;
+  }
+  footer div {
+    font-size: 30px;
+    height: auto;
+  }
+
+  .title {
+    font-size: 150px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .hero {
+    display: grid;
+    grid-template-columns: 100%;
+    height: auto;
+  }
+
+  .historia {
+    text-align: justify;
+    font-size: 30px;
+    height: 650px;
+    padding: 10px;
+  }
+
+  .carousel-item img {
+    height: 400px;
+    width: 400px;
+  }
+  p {
+    font-size: 30px;
+    margin: 10px;
+    height: auto;
+  }
+  iframe {
+    height: 120px;
+    width: 100%;
+  }
+  .albumes {
+    display: grid;
+    grid-template-columns: 100%;
+    height: 1200px;
+
+    width: 800px;
+  }
+  .albumes iframe {
+    height: 200px;
+    width: 300px;
+  }
+  .notes {
+    display: grid;
+    grid-template-columns: 100%;
+    height: 1200px;
+    width: 600px;
+    width: fit-content;
+  }
+  .notes iframe {
+    height: 200px;
+    width: 300px;
+  }
+
+  .pluh {
+    font-size: 25px;
+    height: auto;
+    margin: 10px;
+    width: 1000px;
+  }
+  .box-item {
+    height: 370px;
+  }
+
+  .box-item img {
+    display: block;
+    height: 250px;
+    width: 250px;
+    justify-content: space-around;
+    filter: blur(5px);
+    transition: 0.4s;
+    padding-right: 5px;
+  }
+  .box-item img:hover {
+    height: 300px;
+    width: 300px;
     filter: blur(0px);
   }
 
