--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,4 +13,6 @@
 @import "layouts/mdd";
 @import "layouts/nvt";
 @import "layouts/notas";
+@import "layouts/contacto";
+@import "layouts/desarrollador";
 @import "layouts/mediaqueries";
