--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -20,5 +20,5 @@ p {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: aliceblue;
   margin: 5px;
-  font-size: 50px;
+  height: auto;
 }
