--- a/scss/layouts/_mdd.scss
+++ b/scss/layouts/_mdd.scss
@@ -11,12 +11,10 @@
   height: 300px;
   grid-area: caja1;
   filter: blur(5px);
-  transition: 0.4s;
+  transition: transform 0.3s ease-in-out;
 }
 
 .box img:hover {
-  width: 350px;
-  height: 350px;
-  grid-area: caja1;
   filter: blur(0px);
+  transform: scale(1.1);
 }
