--- a/css/style.css
+++ b/css/style.css
@@ -17,23 +17,47 @@ header {
 }
 .posteo-texto h1 {
   font-family: fantasy;
-  font-size: 56px;
-  text-align: left;
+  font-size: 100px;
+  text-align: center;
   color: aliceblue;
 }
 .posteo-texto h2 {
   color: aliceblue;
+  font-size: 40px;
+  text-align: center;
 }
 
 .posteo-contenido {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: aliceblue;
   font-size: 30px;
+  margin: 5px 15%;
 }
 
 .navbar {
   background-color: bisque !important;
   padding: 5px 10%;
+  font-size: 40px;
+}
+.navbar .navbar-brand {
+  font-size: 60px;
+  font-weight: bold;
+  transition: transform 0.3s ease-in-out;
+}
+.navbar .navbar-brand:hover {
+  transform: scale(1.1);
+}
+.navbar .navbar-item {
+  margin-left: 100px;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  margin-left: 50px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+  transform: scale(1.1);
 }
 
 .copy {
@@ -43,6 +67,20 @@ header {
 
 main {
   min-height: 85vh;
+}
+
+.posteo-media {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 75%;
+  margin: 100px auto;
+}
+.posteo-media iframe {
+  height: 300px;
+  border-radius: 10px;
+  width: 80%;
+  margin: 10% 20px;
 }
 
 footer {
@@ -56,12 +94,12 @@ footer {
 
 .carousel-inner,
 .carousel-item {
-  height: 500px;
+  height: 600px;
   margin-bottom: 80px;
 }
 
 .carousel-item active {
-  height: 500px;
+  height: 600px;
 }
 
 .carousel-item img {
@@ -69,42 +107,24 @@ footer {
 }
 
 .posteo-media {
-  display: flex;
-  height: 356px;
-  justify-content: space-between;
-  width: 80%;
-  margin: auto;
+  display: grid;
+  gap: 30px;
+  grid-template-columns: repeat(3, 1fr);
+  width: 75%;
+  margin: 100px auto;
 }
 .posteo-media iframe {
-  width: 14%;
-  object-fit: cover;
-  border-radius: 12px;
+  height: 300px;
+  border-radius: 10px;
+  width: 80%;
+  margin: 10% 20px;
 }
 
-.notes {
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.olga {
-  width: 200px;
-}
-
-.ibai {
-  width: 200px;
-}
-
-.grego {
-  width: 200px;
-}
-
-.resistencia {
-  width: 200px;
-}
-
-.inter {
-  width: 200px;
+iframe {
+  height: 300px;
+  border-radius: 10px;
+  width: 80%;
+  margin: 10% 20px;
 }
 
 .box-item {
@@ -128,6 +148,7 @@ footer {
   transform: scale(1.1);
 }
 
+/*modificar mediaquierie*/
 .org {
   height: 100%;
   display: flex;
@@ -148,30 +169,11 @@ footer {
   width: 400px;
 }
 
-.notes {
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.olga {
-  width: 200px;
-}
-
-.ibai {
-  width: 200px;
-}
-
-.grego {
-  width: 200px;
-}
-
-.resistencia {
-  width: 200px;
-}
-
-.inter {
-  width: 200px;
+iframe {
+  height: 300px;
+  border-radius: 10px;
+  width: 80%;
+  margin: 10% 20px;
 }
 
 .contact {
@@ -205,201 +207,9 @@ footer {
   margin: 20px;
 }
 
-@media (max-width: 768px) {
-  .nav ul {
-    height: auto;
-    font-size: medium;
-    width: 100%;
-  }
-  .fondo-principal {
-    background-color: black;
-    background-size: 100%;
-  }
-  footer div {
-    font-size: small;
-    height: auto;
-  }
-  .title {
-    font-size: 90px;
-    text-align: center;
-  }
-  h2 {
-    font-size: large;
-    text-align: center;
-  }
-  .hero {
-    display: grid;
-    grid-template-columns: 100%;
-    height: auto;
-  }
-  .historia {
-    text-align: justify;
-    font-size: 10px;
-    height: 700px;
-    padding: 10px;
-  }
-  .carousel-item img {
-    height: 300px;
-    width: 300px;
-  }
-  p {
-    font-size: small;
-    margin: 10px;
-  }
-  iframe {
-    height: 120px;
-    width: 50px;
-  }
-  .albumes {
-    display: grid;
-    grid-template-columns: 100%;
-    height: 1200px;
-    width: fit-content;
-    width: 600px;
-  }
-  .albumes iframe {
-    height: 200px;
-    width: 300px;
-  }
-  .notes {
-    display: grid;
-    grid-template-columns: 100%;
-    height: 1200px;
-    width: 600px;
-    width: fit-content;
-  }
-  .notes iframe {
-    height: 200px;
-    width: 300px;
-  }
-  .pluh {
-    font-size: small;
-    height: auto;
-    margin: 10px;
-  }
-  .box-item {
-    height: 370px;
-  }
-  .box-item img {
-    height: 200px;
-    width: 100px;
-    justify-content: space-between;
-    filter: blur(5px);
-    transition: 0.4s;
-  }
-  .box-item img:hover {
-    height: 100%;
-    width: 100px;
-    filter: blur(0px);
-  }
-  .org {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 50px;
-    height: auto;
-  }
-  .cancion {
-    height: 300px;
-  }
-}
-@media (max-width: 1200px) {
-  .nav ul {
-    height: auto;
-    font-size: 50px;
-    width: 100%;
-  }
-  .fondo-principal {
-    background-color: black;
-    background-size: 100%;
-  }
-  footer div {
-    font-size: 30px;
-    height: auto;
-  }
-  .title {
-    font-size: 150px;
-    text-align: center;
-  }
-  h2 {
-    font-size: 40px;
-    text-align: center;
-  }
-  .hero {
-    display: grid;
-    grid-template-columns: 100%;
-    height: auto;
-  }
-  .historia {
-    text-align: justify;
-    font-size: 30px;
-    height: 850px;
-    padding: 10px;
-  }
-  .carousel-item img {
-    height: 400px;
-    width: 400px;
-  }
-  p {
-    font-size: 20px;
-    margin: 10px;
-    height: auto;
-  }
-  iframe {
-    height: 40px;
-    width: 100%;
-  }
-  .albumes {
-    display: grid;
-    grid-template-columns: 100%;
-    height: 1200px;
-    width: 800px;
-  }
-  .albumes iframe {
-    height: 200px;
-    width: 300px;
-  }
-  .notes {
-    display: grid;
-    grid-template-columns: 100%;
-    height: 1200px;
-    width: 600px;
-    width: fit-content;
-  }
-  .notes iframe {
-    height: 200px;
-    width: 300px;
-  }
-  .pluh {
-    font-size: 25px;
-    height: auto;
-    margin: 10px;
-    width: 1000px;
-  }
-  .box-item {
-    height: 370px;
-  }
-  .box-item img {
-    display: block;
-    height: 250px;
-    width: 250px;
-    justify-content: space-around;
-    filter: blur(5px);
-    transition: 0.4s;
-    padding-right: 5px;
-  }
-  .box-item img:hover {
-    height: 300px;
-    width: 300px;
-    filter: blur(0px);
-  }
-  .org {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 50px;
-    height: auto;
-  }
-  .cancion {
-    height: 300px;
+@media (max-width: 980px) {
+  .posteo-media {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
