--- a/css/style.css
+++ b/css/style.css
@@ -39,11 +39,6 @@ header {
   padding: 5px 10%;
   font-size: 40px;
 }
-.navbar .navbar-brand {
-  font-size: 60px;
-  font-weight: bold;
-  transition: transform 0.3s ease-in-out;
-}
 .navbar .navbar-brand:hover {
   transform: scale(1.1);
 }
@@ -81,6 +76,23 @@ main {
   border-radius: 10px;
   width: 80%;
   margin: 10% 20px;
+}
+
+.navbar-brand {
+  font-size: 60px;
+  font-weight: bold;
+  transition: transform 0.3s ease-in-out;
+}
+
+footer .copy {
+  font-size: 25px;
+  font-weight: bold;
+}
+footer a {
+  list-style: none;
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
 }
 
 footer {
@@ -127,14 +139,6 @@ iframe {
   margin: 10% 20px;
 }
 
-.box-item {
-  display: grid;
-  grid-template-columns: 25% 25% 25%;
-  gap: 5px;
-  padding: 10px;
-  justify-content: space-around;
-}
-
 .box img {
   width: 300px;
   height: 300px;
@@ -148,27 +152,6 @@ iframe {
   transform: scale(1.1);
 }
 
-/*modificar mediaquierie*/
-.org {
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.pluh {
-  background-color: color(from color srgb r g b);
-  height: 500px;
-  width: 500px;
-  color: aliceblue;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 18px;
-}
-
-.cancion {
-  justify-content: space-around;
-  width: 400px;
-}
-
 iframe {
   height: 300px;
   border-radius: 10px;
@@ -178,17 +161,6 @@ iframe {
 
 .contact {
   background-color: black;
-}
-
-.contacto {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 48px;
-  color: aliceblue;
-}
-
-.search {
-  color: aliceblue;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .designer {
@@ -210,6 +182,37 @@ iframe {
 @media (max-width: 980px) {
   .posteo-media {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .carousel-item {
+    height: auto;
+  }
+}
+@media (max-width: 768px) {
+  .posteo-contenido {
+    font-size: large;
+  }
+  .navbar-brand {
+    font-size: 40px;
+  }
+}
+@media (max-width: 425px) {
+  .navbar-brand {
+    font-size: 30px;
+  }
+  .carousel-item {
+    height: 350px;
+  }
+  .posteo-contenido {
+    font-size: medium;
+  }
+  .posteo-media img {
+    height: 200px;
+    width: 150px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  footer .copy {
+    font-size: small;
   }
 }
 
