--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -43,11 +43,7 @@ header {
   background-color: bisque !important;
   padding: 5px 10%;
   font-size: 40px;
-  .navbar-brand {
-    font-size: 60px;
-    font-weight: bold;
-    transition: transform 0.3s ease-in-out;
-  }
+
   .navbar-brand:hover {
     transform: scale(1.1);
   }
@@ -84,5 +80,23 @@ main {
     border-radius: 10px;
     width: 80%;
     margin: 10% 20px;
+  }
+}
+.navbar-brand {
+  font-size: 60px;
+  font-weight: bold;
+  transition: transform 0.3s ease-in-out;
+}
+
+footer {
+  .copy {
+    font-size: 25px;
+    font-weight: bold;
+  }
+  a {
+    list-style: none;
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
   }
 }
