--- a/scss/layouts/_mediaqueries.scss
+++ b/scss/layouts/_mediaqueries.scss
@@ -2,4 +2,39 @@
   .posteo-media {
     grid-template-columns: repeat(2, 1fr);
   }
+  .carousel-item {
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .posteo-contenido {
+    font-size: large;
+  }
+  .navbar-brand {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 425px) {
+  .navbar-brand {
+    font-size: 30px;
+  }
+  .carousel-item {
+    height: 350px;
+  }
+  .posteo-contenido {
+    font-size: medium;
+  }
+  .posteo-media img {
+    height: 200px;
+    width: 150px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  footer {
+    .copy {
+      font-size: small;
+    }
+  }
 }
